--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "plantuml-helper",
   "main": "./lib/plantuml-helper",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "This package prides",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "plantuml-helper:fetch"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
