--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-plantuml": "^0.9.0"
+  }
 }
